tests/ui/parser/import-from-rename.stderr
error: expected `;`, found keyword `as`
  --> $DIR/import-from-rename.rs:1:16
   |
LL | use foo::{bar} as baz;
   |                ^^ expected `;`
   |
   = note: glob-like brace syntax must be last on the path

error: aborting due to 1 previous error

